@@ -20,6 +20,7 @@ PostGIS 2.0.1
   - #1789, fix false edge-node crossing report in ValidateTopology.
   - #1790, fix toTopoGeom handling of duplicated primitives.
   - #1791, fix ST_Azimuth with very close but distinct points.
+  - #1797, fix (ValidateTopology(xxx)).* syntax calls.
   - #1805, put back the 900913 SRID entry.
   - #1819, fix floating point issues with ST_World2RasterCoord and
            ST_Raster2WorldCoord variants.
